<resources>
    <string name="app_name">Ebike_BT</string>
    <string name="disconnect">disconnect</string>
    <string name="theme">theme</string>
    <string name="bt_devices">bt devices</string>
    <string name="configuration">configuration</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="back">Back</string>
    <string name="gps">GPS</string>
    <string name="paired_devices">Paired devices</string>
    <string name="auto_connect">Auto connect to device</string>

    <!-- Bluetooth -->
    <string name="title_connected">connected</string>
    <string name="title_not_connected">not connected</string>

    <string name="default_ampers">00.0A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_watts">0000W</string>
    <string name="average_speed">Avera:</string>
    <string name="default_km_average">00</string>
    <string name="default_kmh">00</string>
    <string name="default_voltaje">00,0V</string>
    <string name="default_percent">000%</string>
    <string name="km_h">km/h</string>
    <string name="maximum_speed">Maxim:</string>
</resources>