<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    >

    <item
        android:id="@+id/menu_theme_button"
        android:icon="@drawable/ic_sun"
        android:title="@string/theme"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bt"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:title="@string/bt_devices"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_config"
        android:icon="@drawable/ic_settings"
        android:title="@string/configuration"
        app:showAsAction="always" />
</menu>